[project]
name = 'MerakiAsync'
version = '1.0.0'
description = 'An async python package for interacting with the Meraki Dashboard API.'
readme = 'README.md'
requires-python = '>=3.8'
authors = [
    { name = 'Zach Brewer'},
]

keywords = [
    'meraki', 'python', 'automation', 'dashboard-api', 'meraki-api' 
]

license = {file = 'LICENSE.md'}
dependencies = [
    'meraki>=1.42.0',
    'tqdm>=4.66.1'
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
    'Jinja2>=3.1.3',
    'yapf >=0.40.2',
]

[project.urls]
repository = 'https://github.com/zabrewer/MerakiAsync'
changelog = 'https://github.com/zabrewer/MerakiAsync/blob/main/CHANGELOG.md'


[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['merakiasync', 'merakiasync.api', 'merakiasync.asynctasks']